Update to Vaadin 25.2